saturn-account-macros/tests/compile_fail/duplicate_boolean_flags.stderr
error: duplicate `signer` flag
 --> tests/compile_fail/duplicate_boolean_flags.rs:5:23
  |
5 |     #[account(signer, signer)]
  |                       ^^^^^^
